new user accounts go into database now

--- a/app/views/users/signup.html.erb
+++ b/app/views/users/signup.html.erb
@@ -1,1 +1,10 @@
-Views > users > signup
+<h1>Sign up</h1>
+
+
+<form action="/users" method="POST">
+  <input name="authenticity_token" value="<%= form_authenticity_token() %>" type="hidden">
+  <input type="text" name="email" placeholder="Email">
+  <input type="password" name="password" placeholder="Password">
+
+  <button>Sign up</button>
+</form>
