--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,30 +1,40 @@
 
+<style>
+  #timeline {
+    height:70vh;
+    width:90vw;
+    border:1vw solid darkgrey;
+    overflow: scroll;
+  }
+</style>
+
 
 <nav>
-  <% if session[:user_id] %>
+  <%if session[:user_id]%>
 
     <!-- log out button -->
-    <form id="logout-button" action="/session" method="POST">
-      <input type="hidden" name="_method" value="DELETE">
-      <input name="authenticity_token" value="<%= form_authenticity_token() %>" type="hidden">
-      <button type="submit">Log out</button>
-    </form>
+    <%= render 'home/logout_button' %>
 
-  <% else %>
-  
+  <%else%>
+
     <!-- log in button/form -->
-    <form id="signup-button-form" action="/login" method="POST">
-      <input type="email" name="email" placeholder="Email">
-      <input type="password" name="password" placeholder="Password">
-      <input name="authenticity_token" value="<%= form_authenticity_token() %>" type="hidden">
-      <button type="submit">Log in</button>
-    </form>
+    <%= render 'home/login_button' %>
    
     <!-- sign up button -->
     <a href="/users/new">Sign up</a>
-  <% end %>
+  <%end%>
 
 </nav>
 
-views > home > index
 
+<main id="timeline">
+  
+  <%if session[:user_id]%>
+
+  <!-- timeline -->
+  <%= render "/home/timeline" %>
+
+
+  <%end%>
+
+</main>
