--- a/app/views/home/_new_entry.html.erb
+++ b/app/views/home/_new_entry.html.erb
@@ -11,8 +11,31 @@
 
     display:none;
   }
+
+  #icon-selection {
+    display:hidden;
+  }
 </style>
 
 <section id="new-entry">
+
+  <div id="icon-selection">
+    <ul>
+      <li>1</li>
+      <li>2</li>
+      <li>3</li>
+    </ul>
+  </div>
+
+  
+  <img src="#">
+  <h3> {{ category name }} </h3>
+  
+  <div id="duration">
+    <input type="time" name="starttime">
+    <input type="time" name="endtime">
+  </div>
+
+  <button>Submit</button>
   
 </section>
