entry times now autopopulate and i made a nice function for it

--- a/app/views/home/_new_entry.html.erb
+++ b/app/views/home/_new_entry.html.erb
@@ -65,6 +65,8 @@
     $('#new-entry-date').val( new Date().toDateInputValue() );
     $('#today-date').html( new Date().toDateInputValue() );
 
+    /* Set up clicked time slot as default -- this is set up in index.html.erb */
+
 
     /* Submit Check */
     $('#new-entry-submit').on('click', function(){
