chart.js inserted. now working on chart function

--- a/app/views/users/analyses.html.erb
+++ b/app/views/users/analyses.html.erb
@@ -19,11 +19,21 @@
       </div>
     <%end%>
   </section>
+
+
+
+  <section id="data-piechart">
+    <%= render 'users/analysis_partials/piechart' %>
+  </section>
+
+
 </section>
 
 
 
-<!--    {
+<!-- 
+//@data_hash ==>   
+    {
      "new-test-category"=>{
        :id=>7, 
        :icon=>"3", 
