ruby object data successfully parsed into JSON object and can now be used by the javascript

--- a/app/views/users/analyses.html.erb
+++ b/app/views/users/analyses.html.erb
@@ -19,7 +19,10 @@
       </div>
     <%end%>
   </section>
-
+  
+  <!-- converts ruby object to JSON -->
+  <!-- IMPORTANT -->
+  <%= javascript_tag "var dataHash = #{@data_hash.to_json}" %> 
 
 
   <section id="data-piechart">
