user now only sees categories he himself has created thanks to checking that the user_id on the categories rendered is equal to the user_id in the session

--- a/app/views/home/_categories.html.erb
+++ b/app/views/home/_categories.html.erb
@@ -22,7 +22,9 @@
       <input type="text" name="name" list="categories-list"/>
       <datalist id="categories-list">
         <%@categories.each do |c|%>
-          <option value="<%=c[:name]%>"> <%=c[:name]%> </option>
+          <%if c.user_id == session[:user_id]%>
+            <option value="<%=c[:name]%>"> <%=c[:name]%> </option>
+          <%end%>
         <%end%>
       </datalist> 
       
