--- a/app/views/users/analysis_partials/_piechart.html.erb
+++ b/app/views/users/analysis_partials/_piechart.html.erb
@@ -33,28 +33,7 @@
   <script>
     
 
-    var testPeriodWeek = {
-      'period': 'week',
-      'week': 41,
-      'month': undefined,
-      'year': 2015
-    }
 
-    var testPeriodMonth = {
-      'period': 'month',
-      'week': undefined,
-      'month': 10,
-      'year': 2015
-    }
-
-    var testPeriodYear = {
-      'period': 'year',
-      'week': undefined,
-      'month': undefined,
-      'year': 2015
-    }
-
-    getUsageData(testPeriodYear, dataHash);
     /*
       return [
         {
@@ -115,6 +94,29 @@
 
       $(document).ready(function(){
 
+            var testPeriodWeek = {
+      'period': 'week',
+      'week': 41,
+      'month': undefined,
+      'year': 2015
+    }
+
+    var testPeriodMonth = {
+      'period': 'month',
+      'week': undefined,
+      'month': 10,
+      'year': 2015
+    }
+
+    var testPeriodYear = {
+      'period': 'year',
+      'week': undefined,
+      'month': undefined,
+      'year': 2015
+    }
+
+    getUsageData(testPeriodYear, dataHash);
+
         //default graph
         var ctx = $('#data-piechart .chart-month canvas').get(0).getContext("2d");
         window.myPie = new Chart(ctx).Pie(pieData);
@@ -122,33 +124,10 @@
         //when change of inputs
         var pieChartInputs = $('#data-piechart section .choose-period');
         pieChartInputs.change(function(){
-          debugger
-          var period = getPeriod( $(this).val() ),
-              periodData;
+          var inputValue = $(this).val(),
+              periodData = getPeriodData(inputValue),
+              usageData = getUsageData(periodData, dataHash);
 
-          if (period === "week") {
-            
-          } else if (period === "month") {
-            periodData = {
-              'week': undefined,
-              'month': parseInt( $(this).val().split('-')[1] ),
-            }
-
-          } else if (period === "year") {
-            periodData = {
-              'week': undefined,
-              'month': undefined,
-              'year': parseInt( $(this).val() )
-            }
-          }
-          // week = "2015-W42"
-          // month = "2015-10"
-          // year = "2014"
-
-
-          periodData = ""
-          var period = $(this).val();
-          //update pie chart here.
           
         });
       });
